Рефакторинг, добавлен валютный хэндлер